-
Bug
-
Resolution: Done
-
P1: Critical
-
5.2.0 RC1
-
None
-
Windows (7)
-
a935b3fbd8297e6e2ae6ffdf8ed2790fdf0d46f1 (stable, 16.12.2013, 5.2.1)
Printing on Windows seems to be broken in Qt 5.2.0
The attached document shows the scanned output of printing from the richtext/QTextEdit example
on a HP Color Laserjet CM6040. The page layout is broken and it seems there are no line breaks.
I tracked the regression to have been introduced by the change
3396ba5612c1047d1b21a90c4996dff848c00114 (Match up the specified paper size to an existing one if possible)
I have verified the issue on two different windows 7 setups but only tested on a single printer.
Printing to PDF works as expected, as does the print preview.
- is required for
-
QTBUG-35562 Issues to be fixed in Qt 5.2.1
-
- Closed
-
- relates to
-
QTBUG-44353 QPrinter::pageRect() returns negative values
-
- Reported
-
-
QTBUG-36308 Layout problem when printing from QWebView on Windows
-
- Closed
-
- replaces
-
QTBUG-36809 Printing QTextDocument text does not wrap and only 1 page
-
- Closed
-
-
QTCREATORBUG-11215 Print Not Working Properly
-
- Closed
-
-
QTBUG-36516 Regression , QPrinter::pageRect() returns negative value using Qt5.2 on Windows
-
- Closed
-
- resulted from
-
QTBUG-34276 Setting the paper size for QPrinter to a custom size has no effect on the final printed page size
-
- Closed
-