Windows: Fix printing.

Clear custom paper size flag in
QWin32PrintEnginePrivate::updateCustomPaperSize().
Breakage introduced by 3396ba5612c1047d1b21a90c4996dff848c00114 .

Task-number: QTBUG-35500

Change-Id: I7e7708444cd7201af35e0f5d9b16d6c73fee77f6
Reviewed-by: John Layt <jlayt@kde.org>

cregit: a935b3fbd8297e6e2ae6ffdf8ed2790fdf0d46f1 https://github.com/qt/qtbase/commit/a935b3fbd8297e6e2ae6ffdf8ed2790fdf0d46f1