src/printsupport/kernel/qprintengine_win.cpp
@@ -11927,7 +11927,7 @@ name|dmPaperSize
 decl_stmt|;
 name|has_custom_paper_size
 operator|=
-literal|true
+literal|false
 expr_stmt|;
 if|if
 condition|(
@@ -11945,6 +11945,10 @@ operator|::
 name|Custom
 condition|)
 block|{
+name|has_custom_paper_size
+operator|=
+literal|true
+expr_stmt|;
 specifier|const
 name|QList
 argument_list|<
